@@ -1,5 +1,6 @@
 IO.include("frame/Opt.js");
 IO.include("frame/Chain.js");
+IO.include("frame/Link.js");
 IO.include("frame/Hash.js");
 IO.include("frame/Namespace.js");
 IO.include("frame/Reflection.js");
